# phan_tich_khoa_luan

./: .dockerignore  .env  .gitignore  AGENTS.md  Dockerfile.data  Dockerfile.ml  README.md  config.py  context_project.md  current_context_code.md  requirements.txt  run.py
app/: start_backend.py
app/backend/: bootstrap.py  main.py  requirements.txt
app/frontend/: .gitignore  next.config.ts  package-lock.json  package.json  (+1 more)
cognitive_trading/: __init__.py  config.py  runner.py
dashboard/: dashboard_streamlit.py  next.config.ts  package-lock.json  package.json  tailwind.config.ts
data/: DATA_DEPLOYMENT_COMPLETE.md  DATA_LAYER_README.md  DATA_LAYER_STATUS_REPORT.md  DEPLOYMENT_STATUS_REPORT_v3.md  DEPLOYMENT_VERIFICATION_GUIDE.md
requirements/: data.txt  ml.txt
tests/: test_data_layer_models.py  test_intraday_ingestion.py
tracking_news/: .mcp.json  pyproject.toml
tracking_news/app/: config.py  mcp_server.py
tracking_news/app/db/: articles_repo.py  conn.py  crawl_state_repo.py  ingest_runs_repo.py  init_db.py  migrate_article_tickers.py
tracking_news/app/dedup/: hashers.py  service.py
tracking_news/app/extract/: http_client.py  normalize.py
tracking_news/app/fomo/: scorer.py
tracking_news/app/ingest/: crawl_cafef_timelinelist_raw.py  pipeline.py  rebuild_cafef.py  run_once.py
tracking_news/app/sources/: __init__.py  baochinhphu.py  baodautu.py  cafef.py  dantri.py  nld.py  registry.py  tuoitre.py  vietnamnet.py  vnexpress.py
tracking_news/app/tickers/: vn30.py
tracking_news/vn_news_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+229 files in other folders)
